'https://plantuml.com/sequence-diagram

@startuml
class Alumno {
    -materias: List<Materia>
}

class Inscripcion {
    -materias: List<Materia>
    -alumno: Alumno
    +aprobada(): boolean
}

class Materia {
    -correlativas: List<Materia>
}

' Relaciones
Alumno  --> "*" Materia
Inscripcion  --> "*" Materia
Inscripcion  o--  Alumno
Materia "*" --> "*" Materia
@enduml
